--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!--  <img src="../img/imgo (1).jpg" width="155px" height="55px">-->
             </div>
             <div class="logo-container">
-                <h1 class="logo">Social <span>&nbsp; Academy</span></h1>
+                <h1 class="logo">Social <span>&nbsp; Academy!</span></h1>
 
             </div>
 
